--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,6 @@
     border: none;
 }
 
-::-webkit-scrollbar {
-  width: 5px;
-}
-
 
 img {
     pointer-events: none;
@@ -34,14 +30,40 @@ img {
     border-radius: 5px;
 }
 
-::-webkit-scrollbar-track {
+
+::-webkit-scrollbar-track
+ {
+     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+     border-radius: 10px;
+     background-color: #F5F5F5;
+ }
+ 
+::-webkit-scrollbar
+ {
+     width: 12px;
+     background-color: #F5F5F5;
+ }
+ 
+::-webkit-scrollbar-thumb
+ {
+     border-radius: 10px;
+     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+     background-color: #555;
+ }
+
+/* ::-webkit-scrollbar {
+  width: 5px;
+} */
+
+
+/* ::-webkit-scrollbar-track {
   background:  linear-gradient(90deg, #5865F2 0.01%, #910DF9 100%);
 }
 
 ::-webkit-scrollbar-thumb {
   background: transparent;
   box-shadow: 0px 0px 0px 100000vh black;
-}
+} */
  
 
 html {
