--- a/css/main.css
+++ b/css/main.css
@@ -1471,10 +1471,9 @@ main .guilds-details-section .guilds-tag small {
     color: #969696;   
 }
 
-.leaderboard-table-section table tbody .table-progress .progress-bar {
+/* .leaderboard-table-section table tbody .table-progress .progress-bar {
     color: #fff;
-    background: linear-gradient(90deg, #367AFF -1.31%, rgba(176, 75, 255, 1) 121.69%);
-    /* filter: blur(2px) !important; */
+    background: linear-gradient(90deg, #367AFF -1.31%, rgba(176, 75, 255, 1) 121.69%); 
     border-radius: 12px;
 }
 
@@ -1489,11 +1488,203 @@ main .guilds-details-section .guilds-tag small {
 
 
 .leaderboard-table-section table tbody .table-progress .progress { 
-    background: rgb(31, 32, 35); 
-    /* filter: blur(2px); */
+    background: rgb(31, 32, 35);  
     border-radius: 12px;
     
+} */
+
+.progress {
+    width: 50px;
+    height: 50px;
+    line-height: 150px;
+    background: none; 
+    box-shadow: none;
+    position: relative;
 }
+.progress:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 3px solid rgba(15, 15, 16, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.progress > span {
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+}
+.progress .progress-left {
+    left: 0;
+}
+.progress .progress-bar {
+    width: 100%;
+    height: 100%;
+    background: none;
+    border-width: 3px;
+    border-style: solid;
+    position: absolute;
+    top: 0;
+    border-color: rgba(246, 179, 99, 1);
+}
+.progress .progress-left .progress-bar {
+    left: 100%;
+    border-top-right-radius: 75px;
+    border-bottom-right-radius: 75px;
+    border-left: 0;
+    -webkit-transform-origin: center left;
+    transform-origin: center left;
+}
+.progress .progress-right {
+    right: 0;
+}
+.progress .progress-right .progress-bar {
+    left: -100%;
+    border-top-left-radius: 75px;
+    border-bottom-left-radius: 75px;
+    border-right: 0;
+    -webkit-transform-origin: center right;
+    transform-origin: center right;
+}
+.progress .progress-value {
+    display: flex;
+    border-radius: 50%;
+    font-size: 14px;
+    text-align: center;
+    line-height: 20px;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-weight: 300;
+}
+.progress .progress-value div {
+    margin-top: 0px;
+    margin-left: 16px;
+}
+.progress .progress-value span {
+    font-size: 12px;
+    text-transform: uppercase;
+}
+/* This for loop creates the necessary css animation names Due to the split circle of progress-left and progress right, we must use the animations on each side. */
+.progress[data-percentage="10"] .progress-right .progress-bar {
+    animation: loading-1 1.5s linear forwards;
+}
+.progress[data-percentage="10"] .progress-left .progress-bar {
+    animation: 0;
+}
+.progress[data-percentage="20"] .progress-right .progress-bar {
+    animation: loading-2 1.5s linear forwards;
+}
+.progress[data-percentage="20"] .progress-left .progress-bar {
+    animation: 0;
+}
+.progress[data-percentage="30"] .progress-right .progress-bar {
+    animation: loading-3 1.5s linear forwards;
+}
+.progress[data-percentage="30"] .progress-left .progress-bar {
+    animation: 0;
+}
+.progress[data-percentage="40"] .progress-right .progress-bar {
+    animation: loading-4 1.5s linear forwards;
+}
+.progress[data-percentage="40"] .progress-left .progress-bar {
+    animation: 0;
+}
+.progress[data-percentage="50"] .progress-right .progress-bar {
+    animation: loading-5 1.5s linear forwards;
+}
+.progress[data-percentage="50"] .progress-left .progress-bar {
+    animation: 0;
+}
+.progress[data-percentage="60"] .progress-right .progress-bar {
+    animation: loading-5 1.5s linear forwards;
+}
+.progress[data-percentage="60"] .progress-left .progress-bar {
+    animation: loading-1 1.5s linear forwards 1.5s;
+}
+.progress[data-percentage="70"] .progress-right .progress-bar {
+    animation: loading-5 1.5s linear forwards;
+}
+.progress[data-percentage="70"] .progress-left .progress-bar {
+    animation: loading-2 1.5s linear forwards 1.5s;
+}
+.progress[data-percentage="80"] .progress-right .progress-bar {
+    animation: loading-5 1.5s linear forwards;
+}
+.progress[data-percentage="80"] .progress-left .progress-bar {
+    animation: loading-3 1.5s linear forwards 1.5s;
+}
+.progress[data-percentage="90"] .progress-right .progress-bar {
+    animation: loading-5 1.5s linear forwards;
+}
+.progress[data-percentage="90"] .progress-left .progress-bar {
+    animation: loading-4 1.5s linear forwards 1.5s;
+}
+.progress[data-percentage="100"] .progress-right .progress-bar {
+    animation: loading-5 1.5s linear forwards;
+}
+.progress[data-percentage="100"] .progress-left .progress-bar {
+    animation: loading-5 1.5s linear forwards 1.5s;
+}
+@keyframes loading-1 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+   }
+    100% {
+        -webkit-transform: rotate(36);
+        transform: rotate(36deg);
+   }
+}
+@keyframes loading-2 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+   }
+    100% {
+        -webkit-transform: rotate(72);
+        transform: rotate(72deg);
+   }
+}
+@keyframes loading-3 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+   }
+    100% {
+        -webkit-transform: rotate(108);
+        transform: rotate(108deg);
+   }
+}
+@keyframes loading-4 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+   }
+    100% {
+        -webkit-transform: rotate(144);
+        transform: rotate(144deg);
+   }
+}
+@keyframes loading-5 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+   }
+    100% {
+        -webkit-transform: rotate(180);
+        transform: rotate(180deg);
+   }
+}
+.progress {
+    margin-bottom: 1em;
+}
+
 
 
 .leaderboard-table-section table tr td,
